...
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/post_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Post"
                android:drawableTop="@drawable/ic_baseline_post_add_24"/>
        </LinearLayout>

...
